# 3d-gaussian-splatting

./: .gitignore  LICENSE.txt  README.md  camera.py  colmap_data_viewer.py  data_manager.py  plot_reconstruction.py  pyproject.toml  renderer_gl.py  renderer_jax.py  train.py  train_original.py  utils.py  viewer_gl.py  viewer_jax.py  viewer_jax_main.py  visualize.py
assets/videos/: checkpoints_counter.webm
config/: default.json
gs/: config.py  density_control.py  function_factory.py  helper.py  loss_function.py  make_update.py  projection.py  rasterization.py  utils.py
gs/core/: density_control.py  projection.py  rasterization.py  rasterization_customvjp.py  tiling_and_sorting.py
gs/viewer/: camera.py  data_manager.py  renderer.py  viewer.py
